--- a/third/index.html
+++ b/third/index.html
@@ -42,7 +42,7 @@
 				<picture>
 					<source media="(min-width: 1200px)" srcset="img/svg/cat_lady.svg">
 					<source media="(min-width: 768px)" srcset="img/svg/cats_in_love.svg">
-					<img src="img/svg/cat_lady.svg" width="200" height="150" alt="">
+					<img src="img/svg/small_cat.svg" alt="">
 				</picture>
 			</div>
 			<h1 class="page-header__tagline">Name of ...</h1>
