--- a/forth/index.html
+++ b/forth/index.html
@@ -36,9 +36,9 @@
 					<li class="main-nav__item"><a href="#contacts">Контакты</a></li>
 				</ul>
 				<div class="main-nav__social">
-					<ul class="social-links">
+					<ul class="social-links social-links--main-nav">
 						<li>
-							<a href="#" class="social-links__link social-links__link--fb" target="_blank" title="Мы в Фейсбуке">Мы в Фейсбуке
+							<a href="https://facebook.com/" class="social-links__link social-links__link--fb" target="_blank" title="Мы в Фейсбуке">Мы в Фейсбуке
 								<svg aria-hidden="true">
 				              		<use xlink:href="img/symbols.svg#face_1"></use>
 				            	</svg>
@@ -83,7 +83,7 @@
 				</picture>
 			</div>
 			<h1 class="page-header__tagline">cats cats cats cats</h1>
-			</div>
+		</div>
 		
 	</header>
 	<section class="s-about">
@@ -101,14 +101,18 @@
 	</section>
 	<section class="s-parents">
 		<div class="s-parents__wrapper">
-			<header class="s-parents__header"></header>
+			<header class="s-parents__header">
+				<h2 class="s-parents__title">Наши родители</h2>
+			</header>
 			<div class="s-parents__items"></div>
 		</div>
 		
 	</section>
 	<section class="s-children">
 		<div class="s-children__wrapper">
-			<header class="s-children__header"></header>
+			<header class="s-children__header">
+				<h2 class="s-children__title">Наши дети</h2>
+			</header>
 			<div class="s-children__items"></div>
 		</div>
 		
@@ -122,10 +126,10 @@
 				<form class="form" action="" method="post">
 					<div class="form-group__wrapper">
 						<div class="form-group">
-						<input class="form-group__field" type="text" name="name" value="" id="name" required placeholder="Имя">
+						<input class="form-group__field" type="text" name="name" value="" id="name" required placeholder="Имя *">
 						</div>
 						<div class="form-group">
-							<input class="form-group__field" type="email" name="email" value="" id="email" required placeholder="Эл.&nbsp;почта">
+							<input class="form-group__field" type="email" name="email" value="" id="email" required placeholder="Эл.&nbsp;почта *">
 						</div>
 						<div class="form-group">
 							<input class="form-group__field" type="text" name="phone" value="" id="phone" placeholder="Телефон">
@@ -143,9 +147,47 @@
 		</div>
 		
 	</section>
-	<footer class="main-footer"> 
-		<div class="main-footer__wrapper">
-			
+	<footer class="page-footer"> 
+		<div class="page-footer__wrapper">
+			<div class="page-footer__logo">
+					<picture>
+						<source media="(min-width: 1200px)" srcset="img/cat_lady.svg">
+						<source media="(min-width: 768px)" srcset="img/cats_in_love.svg">
+						<img src="img/small_cat.svg" alt="">
+					</picture>
+				</div>
+			<div class="page-footer__social">
+				<ul class="social-links social-links--footer">
+					<li>
+						<a href="https://facebook.com/" class="social-links__link social-links__link--fb" target="_blank" title="Мы в Фейсбуке">Мы в Фейсбуке
+							<svg aria-hidden="true">
+			              		<use xlink:href="img/symbols.svg#face_1"></use>
+			            	</svg>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="social-links__link social-links__slink--in" target="_blank" title="Мы в Инстаграмм">Мы в Инстаграмм
+							<svg aria-hidden="true">
+			              		<use xlink:href="img/symbols.svg#inst_1"></use>
+			            	</svg>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="social-links__link social-links__link--fb" target="_blank" title="Мы в Фейсбуке">Мы в Фейсбуке
+							<svg aria-hidden="true">
+			              		<use xlink:href="img/symbols.svg#face_1"></use>
+			            	</svg>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="social-links__link social-links__slink--in" target="_blank" title="Мы в Инстаграмм">Мы в Инстаграмм
+							<svg aria-hidden="true">
+			              		<use xlink:href="img/symbols.svg#inst_1"></use>
+			            	</svg>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</footer>
 	
