--- a/forth/index.html
+++ b/forth/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
-	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid.min.css" />
+	<!-- <link rel="stylesheet" href="libs/bootstrap/bootstrap-grid.min.css" /> -->
 	
 	
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css" />
@@ -104,7 +104,48 @@
 			<header class="s-parents__header">
 				<h2 class="s-parents__title">Наши родители</h2>
 			</header>
-			<div class="s-parents__items"></div>
+			<div class="s-parents__items">
+				<div class="popup-gallery">
+					<h3 class="popup-gallery__title">Мама</h3>
+					<div class="popup-gallery__main-foto">
+						<img src="img/gallery-mom-main.jpg" alt="mom" />
+						<div class="popup-gallery__hovered-content">
+							<!-- <h3>Заголовок работы</h3>
+							<p>Описание работы</p> -->
+							<a href="img/mom-3.jpg" class="popup-gallery__hovered-link button button--link">Посмотреть</a>
+						    <a href="img/mom-1.jpg"></a>
+						    <a href="img/mom-2.jpg"></a>
+					
+						</div>
+					</div>
+					<p class="popup-gallery__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="popup-gallery">
+					<h3 class="popup-gallery__title">Папа</h3>
+					<div class="popup-gallery__main-foto">
+						<img src="img/gallery-dad-main.jpg" alt="dad" />
+						<div class="popup-gallery__hovered-content">
+							<!-- <h3>Заголовок работы</h3>
+							<p>Описание работы</p> -->
+							<a href="img/dad-3.jpg" class="popup-gallery__hovered-link button button--link">Посмотреть</a>
+						    <a href="img/dad-1.jpg"></a>
+						    <a href="img/dad-2.jpg"></a>
+						</div>
+					</div>
+					<p class="popup-gallery__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+
+			</div>
 		</div>
 		
 	</section>
@@ -141,7 +182,7 @@
 							<textarea class="form-group__field form-group__field--area"  name="message" value="" id="message" placeholder="Чем вам помочь?"></textarea>
 						</div>
 					</div>	
-					<input class="button" type="submit" value="Отправить">
+					<input class="button button--submit" type="submit" value="Отправить">
 				</form>
 			</div>
 		</div>
