--- a/fourth/index.html
+++ b/fourth/index.html
@@ -226,7 +226,7 @@
 				<h2 class="s-contacts__title">Напишите нам</h2>
 			</header>
 			<div class="s-contacts__items">
-				<form class="form" action="https://formspree.io/strembov@gmail.com" method="POST">
+				<form class="form" action="https://formspree.io/strembov@gmail.com" method="POST" target="_blank">
 					<div class="form-group__wrapper">
 						<div class="form-group">
 						<input class="form-group__field" type="text" name="name" value="" id="name" required placeholder="Имя *">
