zmieniłem plik svg

--- a/fourth/index.html
+++ b/fourth/index.html
@@ -76,11 +76,12 @@
 		</nav>
 		<div class="page-header__wrapper">
 			<div class="page-header__logo">
-				<picture>
+				<!-- <picture>
 					<source media="(min-width: 1200px)" srcset="img/cat_lady.svg">
 					<source media="(min-width: 768px)" srcset="img/cats_in_love.svg">
 					<img src="img/small_cat.svg" alt="">
-				</picture>
+				</picture> -->
+				<img src="img/logo-main.svg" alt="logo-cat">
 			</div>
 			<h1 class="page-header__tagline">cats cats cats cats</h1>
 		</div>
@@ -253,11 +254,12 @@
 	<footer class="page-footer"> 
 		<div class="page-footer__wrapper">
 			<div class="page-footer__logo">
-					<picture>
+					<!-- <picture>
 						<source media="(min-width: 1200px)" srcset="img/cat_lady.svg">
 						<source media="(min-width: 768px)" srcset="img/cats_in_love.svg">
-						<img src="img/small_cat.svg" alt="">
-					</picture>
+						<img src="img/small_cat.svg" alt="cat">
+					</picture> -->
+					<img src="img/logo-footer.svg" alt="logo-cat" style="fill: green">
 				</div>
 			<div class="page-footer__social">
 				<ul class="social-links social-links--footer">
