--- a/fourth/index.html
+++ b/fourth/index.html
@@ -230,7 +230,7 @@
 					</div>
 					<div class="form-group__wrapper">
 						<div class="form-group form-group--area">
-							<textarea class="form-group__field form-group__field--area" rows="2" name="message" value="" id="message" placeholder="Чем вам помочь?"></textarea>
+							<span><textarea class="form-group__field form-group__field--area" rows="2" name="message" value="" id="message" placeholder="Чем вам помочь?"></textarea></span>
 						</div>
 					</div>	
 					<input class="button button--submit" type="submit" value="Отправить">
